--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <ul class="nav navbar-nav">
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Claims">Claims</a></li>
-                        <li><a asp-area="MicrosoftIdentity" asp-controller="MyAccount" asp-action="EditEmail">Edit Email</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="EditEmail">Edit Email</a></li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
